# two-people

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_init.sql  002_questions.sql  003_more_questions.sql
src/: main.rs
