[package]
name = "two-people"
version = "0.1.0"
edition = "2024"
authors = ["Two People Game"]
description = "A fast-paced 'Which type are you?' card game!"

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "tls-native-tls"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
